--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>FAKE BOT</title>
+    <title>ALIF FAKE BOT</title>
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#about">ABOUT ME</a></li>
         <li><a href="#features">FEATURES</a></li>
         <li><a href="#docs">DOCS</a></li>
       </ul>
